--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "psr-4": {"TogglDaily\\": "src/"}
     },
     "require": {
-        "php-parallel-lint/PHP-Console-Color": "^0.3.0"
+        "php-parallel-lint/php-console-color": "^0.3.0",
+        "ajt/guzzle-toggl": "^1.3"
     }
 }
